sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: not enough arguments for method plusPetit: (x$1: Int, x$2: Int)Boolean.
Unspecified value parameters x$1, x$2.
   while (plusPetit()==false){
                   ^AlgBubbleSort1:8: error: Boolean does not take parameters
        echange(i:Int,i+1:Int)
               ^AlgBubbleSort1:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
       return true
              ^AlgBubbleSort1:9: warning: enclosing method bubbleSort has result type Unit: return value discarded
       return true
       ^