sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i =0
  var echange:Boolean=true 
 	while (plusPetit()==false){
 	  for (i<-1 to getNombreValeurs+1){
    	if(plusPetit(i+1:Int,i:Int):Boolean){
     	 echange(i:Int,i+1:Int)
       return true
      }
     }  
  }
}